Restrturei as divs de Sucesso e a imagem ao lado. Colocando a imagem como ASIDE. Além disso, coloquei dois botões.

--- a/index.html
+++ b/index.html
@@ -48,21 +48,33 @@
     </header>
 
     <main>
-        <article>
+        <nav>
             <div class="teste">
             <h1 class="text1">SUCESSO!</h1>
             <h1 class="text2">SALES FORCE <br>CUSTOMER 360</h1>
+
             <p>O custome 360 é a nossa suíte de produtos e
                 serviços que ajuda <strong>98%</strong> <br> dos clientes a alcançar ou
                  superar suas metas de ROI.</p>
-
             </div>
 
-            <div>
-                <img src="image/salesforce1.webp">
-            </div>
-            </div>
-        </article>
+            <section>
+                <div href="testegratis.html" class="testegratis">
+                    <a >TESTE GRÁTIS</a>
+                 </div>
+
+                 <div href="testegratis.html" class="saibamais">
+                    <a >SAIBA MAIS!</a>
+                </div>
+            </section>
+
+
+        </nav>
+
+        <aside>
+            <img src="image/salesforce1.webp">
+        </aside>
+
     </main>
     
 </body>
