Os botões não estavam funcionando, corrigido

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             </div>
 
             <section>
-                <div href="testegratis.html" class="testegratis">
-                    <a >TESTE GRÁTIS</a>
+                <div class="testegratis">
+                    <a href="testegratis.html">TESTE GRÁTIS</a>
                  </div>
 
-                 <div href="testegratis.html" class="saibamais">
-                    <a >SAIBA MAIS!</a>
+                 <div class="saibamais">
+                    <a href="testegratis.html">SAIBA MAIS!</a>
                 </div>
             </section>
 
