ADICIONEI O FOOTER DA PAGINA, E CRIEI MAIS UMA PAGINA

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <main>
         <nav>
-            <div class="teste">
+            <div>
             <h1 class="text1">SUCESSO!</h1>
             <h1 class="text2">SALES FORCE <br>CUSTOMER 360</h1>
 
@@ -76,6 +76,28 @@
         </aside>
 
     </main>
-    
 </body>
+
+<footer class="main-footer">
+    <div class="primeira-coluna">
+        <ul>
+            <a href="index.html"><img src="image/salesforce-logo.png"></a>
+            <h3 class="title">#challenge.salesforce</h3>
+        </ul>
+    </div>
+
+    <div class="segunda-coluna"> 
+        <ul>
+            <h3>PÁGINAS</h3>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="trailhead.html">trailhead</a></li>
+            <li><a href="acessibilidade.html">Acessibilidade</a></li>
+            <li><a href="suporte.html">Suporte</a></li>
+            <LI><a href="integrantes.html">Integrantes</a></LI>
+        </ul>
+    </div>
+
+</footer>
+
 </html>
