ADICIONANDO CONTEUDO A HOME, SOBRE OQ IREMOS FAZER"

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
             <div class="logo">
                 <a href="index.html">
-                    <img src="image/salesforce-logo.png">
-                </a>
+                    <img src="image/salesforce-logo.png" alt="logo-sales-force">
             </div>
     
             <div class="left-links">
@@ -72,10 +71,30 @@
         </nav>
 
         <aside>
-            <img src="image/salesforce1.webp">
+            <img src="image/salesforce1.webp" alt="Imagem-divertida-mostrando-a-porcentagem-do-impacto-SalesForce">
         </aside>
 
     </main>
+
+    <nav class="plus-planes">
+        <h1>O que queremos adicionar em breve...</h1>
+        <p> Este é um projeto feito por alunos da FIAP, que em parceria com a <strong>Sales Force</strong>, nos desafiou a criar
+            um novo portal para emrpresa, adicionando mais acessibilidade. <br><br>
+        
+            Aqui, na HOME, como pode ver fizemos o header e uma apresentação. Mas isso é apenas o começo, iremos implementar mais coisas. Veja a lista:
+            </p>
+            <br>
+        <ul>
+            <li><strong>HEADER: </strong>Queremos estilizar mais os botões, colocando eles mais interativos, sensíveis a passagem do mouse. No exemplo abaixo, no campo
+                "oferta" em nosso caso será <strong>Produtos: </strong> <br></li>
+            <img src="image/exemplo de botão.gif">
+            <br>
+            <li><strong>MAIN: </strong></li>
+        </ul>
+
+    </nav>
+
+
 </body>
 
 <footer class="main-footer">
