Melhorando a explicação do conteudo da pagina

--- a/index.html
+++ b/index.html
@@ -104,15 +104,10 @@
             </li>
 
             <li class="exemplo-um">
-                <img src="image/EXEMPLO1.png">
+                <img src="image/demo_layout.gif">
                 <p>O conteudo ao lado é da página "<strong>sobre nós</strong>" da Salesforce, que achamos legal de
-                    adicionar, pois dita o <strong>propóstio da marca e seus valores</strong>.</p>
-            </li>
-
-            <li class="exemplo-dois">
-                <img src="image/EXEMPLO2.png">
-                <p>Após a implementação do item acima, colocaremos os <strong>produtos sales force</strong> (citados lá
-                    no item header), da forma ao lado: </p>
+                    adicionar, pois dita o <strong>propóstio da marca e seus valores</strong>. Em seguida, colocaremos os <strong>produtos sales force</strong> (citados lá
+                    no item header), da forma ao lado:</p>
             </li>
 
             <li class="exemplo-tres">
