MELHORANDO ESTRUTURA DO SITE COM FLEX

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             </ul>
         </div>
 
-        <div class="void"></div>
 
         <div class="right-links">
             <ul>
@@ -41,7 +40,7 @@
                     <a href="suporte.html">SUPORTE</a>
                 </li>
                 <li>
-                    <a href="login.html">LOGIN</a>
+                    <a role="button" class="login" href="login.html">LOGIN</a>
                 </li>
             </ul>
         </div>
@@ -49,10 +48,10 @@
     </header>
 
     <main>
-        <nav>
+        <section>
             <div>
                 <h1 class="text1">SUCESSO!</h1>
-                <h1 class="text2">SALES FORCE <br>CUSTOMER 360</h1>
+                <h1 class="text2"> SALESFORCE<br>CUSTOMER 360</h1>
 
                 <p>O custome 360 é a nossa suíte de produtos e
                     serviços que ajuda <strong>98%</strong> <br> dos clientes a alcançar ou
@@ -60,25 +59,23 @@
             </div>
 
             <section>
-                <div class="testegratis">
-                    <a href="testegratis.html">TESTE GRÁTIS</a>
-                </div>
+                <a role="button" class="testegratis" href="testegratis.html">TESTE GRÁTIS</a>
 
-                <div class="saibamais">
-                    <a href="testegratis.html">SAIBA MAIS!</a>
-                </div>
+            
+                <a role="button" class="saibamais" href="testegratis.html">SAIBA MAIS!</a>
+
             </section>
 
 
-        </nav>
+        </section>
 
-        <aside>
+        <div>
             <img src="image/salesforce1.webp" alt="Imagem-divertida-mostrando-a-porcentagem-do-impacto-SalesForce">
-        </aside>
+        </div>
 
     </main>
 
-    <nav class="plus-planes">
+    <nav class="future-planes">
         <h1>O que queremos adicionar em breve...</h1>
 
         <ul>
@@ -97,23 +94,13 @@
 
             <br>
 
-            <li><strong>CONTENT: </strong> O conteudo desta página, sera basicamente dando insights dos valores
+            <li><strong>Conteúdo: </strong> O conteudo desta página, sera basicamente dando insights dos valores
                 Salesforce, impacto emprasarial, e os principais produtos, como: <strong>Sales Cloud, Eeistein GPT, Data
-                    Cloud, Marketing Cloud</strong> - esses tais que terão suas próprias
-                páginas.<br><br>Ideias que queremos implementar:
+                    Cloud, Marketing Cloud</strong> - esses, tais que terão suas próprias
+                páginas.
+                <a href="mapa.html">Veja o conceito aqui</a>
             </li>
 
-            <li class="exemplo-um">
-                <img src="image/demo_layout.gif">
-                <p>O conteudo ao lado é da página "<strong>sobre nós</strong>" da Salesforce, que achamos legal de
-                    adicionar, pois dita o <strong>propóstio da marca e seus valores</strong>. Em seguida, colocaremos os <strong>produtos sales force</strong> (citados lá
-                    no item header), da forma ao lado:</p>
-            </li>
-
-            <li class="exemplo-tres">
-                <strong>FOOTER: </strong> Como pode ver abaixo, o footer será o súmario da página, contendo todos os
-                links, mas também, portador de algumas informações adicionais, como: os criadores do projeto, nome e seus links de linkedin. <br>
-            </li>
 
         </ul>
 
@@ -123,7 +110,8 @@
 </body>
 
 <footer class="main-footer">
-    <div class="primeira-coluna">
+    
+    <div class="footer-logo">
         <ul>
             <a href="index.html"><img src="image/salesforce-logo.png"></a>
             <h3 class="title">#challenge.salesforce</h3>
@@ -139,6 +127,7 @@
             <li><a href="acessibilidade.html">Acessibilidade</a></li>
             <li><a href="suporte.html">Suporte</a></li>
             <LI><a href="integrantes.html">Integrantes</a></LI>
+            <LI><a href="mapa.html">Mapa do site</a></LI>
         </ul>
     </div>
 
