--- a/login.html
+++ b/login.html
@@ -9,31 +9,45 @@
 </head>
 
 <body class="body-login">
-    <section>
-        <div class="logo-salesforce">
+    <main class="main-login">
 
+
+        <div class="logo-salesforce">
             <a role="button" href="index.html"><img src="image/salesforce-logo.png" alt="logo-sales-force"></a>
             <h2>Bem-vindo(a) a Salesforce</h2>
             <p>Encontre inovações para qualquer setor de indústria.</p>
         </div>
-        <img src="image/dashboard-salesforce.png">
+
+        <div><img src="image/salesforce-formulario.png" alt="dashboard-salesforce"></div>
+
         <div>
-            <h1>FECHE MAIS NEGÓCIOS</h1>
+            <h1>Feche mais negócios</h1>
             <p>Não importa o tamanho de sua empresa, todos os agentes de vendas têm uma meta em comum: o desejo de terem
                 um desempenho superior. No entanto é difícil conseguir isso sozinho, e é por isso que nós vamos ajudar
                 você.</p>
-            <h1>OBTENHA:</h1>
-            <UL>
-                <li>Gerencimento de leads;</li>
-                <li>Automação de marketing;</li>
-                <li>Dados de vendas;</li>
-                <li>Gerenciamento de parceiros</li>
-                <li>E muis maiss...</li>
-
-            </UL>
         </div>
 
-    </section>
+
+    </main>
+    <aside>
+        <div>
+            <h1> AQUI, COLOCAREMOS CAIXAS DE PREENCHIMENTO PARA O CADASTRO DO USUÁRIO</h1>
+            <p>Os campos a serem colocamos serão:</p>
+            <ul>
+                <li>Nome completo</li>
+                <li>Nome da empresa</li>
+                <li>Cargo empresarial</li>
+                <li>E-mail corporativo</li>
+                <li>Telefone</li>
+                <li>País (será uma lista de escolha)</li>
+                <li>Idioma (também uma lista de escolha)</li>
+            </ul>
+            <p> A estrutura desta página será basicamente esta, mas iremos trabalhar as caixas de inserção de dados.</p>
+            <a role="button" class="enviar-dados" href="index.html">ENVIAR!</a>
+
+        </div>
+    </aside>
+
 </body>
 
 </html>
