CRIANDO A PÁGINA DE ACESSIBILIDADE

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="produtos.html">PRODUTOS</a>
+                    <a>PRODUTOS</a>
                 </li>
                 <li>
                     <a href="trailhead.html">TRAILHEAD</a>
@@ -59,10 +59,10 @@
             </div>
 
             <section>
-                <a role="button" class="testegratis" href="testegratis.html">TESTE GRÁTIS</a>
+                <a role="button" class="testegratis" href="login.html">TESTE GRÁTIS</a>
 
             
-                <a role="button" class="saibamais" href="testegratis.html">SAIBA MAIS!</a>
+                <a role="button" class="saibamais" href="suporte.html">SAIBA MAIS!</a>
 
             </section>
 
@@ -122,8 +122,7 @@
         <ul>
             <h3>PÁGINAS</h3>
             <li><a href="index.html">Home</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="trailhead.html">trailhead</a></li>
+            <li><a href="trailhead.html">Trailhead</a></li>
             <li><a href="acessibilidade.html">Acessibilidade</a></li>
             <li><a href="suporte.html">Suporte</a></li>
             <LI><a href="integrantes.html">Integrantes</a></LI>
