FIZEMOS MAPA, ADICIONAMOS RMS NO FOOTER E NA PAGINA INTEGRATNES

--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
                 Salesforce, impacto emprasarial, e os principais produtos, como: <strong>Sales Cloud, Eeistein GPT, Data
                     Cloud, Marketing Cloud</strong> - esses, tais que terão suas próprias
                 páginas.
-                <a href="mapa.html">Veja o conceito aqui</a>
             </li>
 
 
@@ -125,9 +124,15 @@
             <li><a href="trailhead.html">Trailhead</a></li>
             <li><a href="acessibilidade.html">Acessibilidade</a></li>
             <li><a href="suporte.html">Suporte</a></li>
-            <LI><a href="integrantes.html">Integrantes</a></LI>
-            <LI><a href="mapa.html">Mapa do site</a></LI>
+            <li><a href="integrantes.html">Integrantes</a></LI>
+            <li><a href="mapa.html">Mapa do site</a></LI>
         </ul>
+    </div>
+    <div class="nomes">
+        <h1>Diego Costa - Front End - RM552648</h1>
+        <h1>Lucas Minozzo - Back End - RMRM553745</h1>
+        <h1>Marcelo Mendes - Back End - RM553654</h1>
+        
     </div>
 
 </footer>
