--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     </main>
 
-    <nav class="future-planes">
+    <div class="future-planes">
         <h1>O que queremos adicionar em breve...</h1>
 
         <ul>
@@ -103,7 +103,7 @@
 
         </ul>
 
-    </nav>
+    </div>
 
 
 </body>
